MDEV-35962 CREATE INDEX fails to heal a FOREIGN KEY constraint

commit_cache_norebuild(): Replace any newly added indexes in
the attached foreign key constraints.